Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/IncompleteArray.out
IncompleteArray.java:11:13: compiler.err.illegal.start.of.type
1 error
